<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="dose_prompt"> 250 mg</string>
    <string name="frequency_prompt">Two times</string>
    <string name="course_prompt">1 Day</string>
    <string name="medicine_type">Tablet</string>
    <string name="medicine_name">Paracetamol</string>
    <string name="dose_timing">After Food</string>
    <string name="exit_medical_screen">Press back again to close the Form.</string>
    <string name="favourite_text">Your favourite medicines will appear here</string>
    <string name="month">Month</string>
    <string name="days">Days</string>
    <!--medical details screen-->


    <string name="menu_preference">Case History Settings</string>
    <string name="menu_pref_store">Preferred Store</string>
    <string name="menu_appointments">Appointments</string>


    <string name="mds_chief_complaints">Chief Complaint:</string>
    <string name="mds_past_history">Past History:</string>
    <string name="mds_family_history">Family History:</string>
    <string name="mds_known_allergies">Known Allergies:</string>
    <string name="mds_physical_exam">Physical Examination:</string>
    <string name="mds_clinical_findings">Clinical Findings:</string>
    <string name="mds_provisional_diagnosis">Provisional/Differential Diagnosis:</string>
    <string name="mds_investigation_advice">Investigation Advised:</string>
    <string name="mds_medication">Medication:</string>
    <string name="mds_assist">Assist</string>
    <string name="mds_preferred_pharmacy">Preferred Pharmacy:</string>
    <string name="mds_follow_up">Follow up:</string>
    <string name="mds_instruction">Instruction/Plan to patient:</string>

    <string name="pe_oxygen">Oxygen </string>
    <string name="pe_temperature">Temp (F) </string>
    <string name="pe_weight">Weight (kg) </string>
    <string name="pe_bp">B.P (mmHg) </string>
    <string name="pe_respiratory">Respiratory </string>
    <string name="pe_pulse">Pulse (BPM)</string>
    <string name="pe_height">Height (cm)</string>

    <string name="personal_info">Personal Information</string>
    <string name="dependent_list">Dependent List</string>
    <string name="medical_history_alert">You don\'t have any medical history.</string>


    <string-array name="array_yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="array_labour_pain">
        <item>Yes</item>
        <item>No</item>
        <item>Induced</item>
    </string-array>

    <string-array name="array_presentation">
        <item>Breech</item>
        <item>Vertex</item>
    </string-array>

    <string-array name="array_term">
        <item>Pre Term</item>
        <item>Full Term</item>
        <item>Post Term</item>
    </string-array>

    <string-array name="array_birth_cry">
        <item>Immediate</item>
        <item>Delayed</item>
        <item>Did not cry</item>
    </string-array>

    <string-array name="array_mode_delivery">
        <item>Normal</item>
        <item>C -section</item>
        <item>Vacum</item>
        <item>Forceps</item>
        <item>Others</item>
    </string-array>

    <string-array name="v_control">
        <item>Normal</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Poor</item>
        <item>Absent</item>
    </string-array>

    <string-array name="reflexes">
        <item>-</item>
        <item>+</item>
        <item>++</item>
        <item>+++</item>
        <item>++++</item>
    </string-array>
    <string-array name="pediatric_reflexes">
        <item>Integrated</item>
        <item>Abnormally Present</item>
        <item>Not Developed</item>
    </string-array>


    <string-array name="array_neonatal">
        <item>Meningitis</item>
        <item>Jaundice</item>
        <item>Hypoglycemia</item>
        <item>Hydrocephalus</item>
        <item>Respiratory Distress</item>
        <item>Fever</item>
        <item>Infection/Sepsis</item>
        <item>Pneumonia</item>
        <item>Seizures</item>
        <item>Dehydration</item>
        <item>Others</item>
    </string-array>
	

<string-array name="units">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
</string-array>

<string-array name="wd_status">
    <item>Incomplete</item>
    <item>Complete</item>
    <item>Delayed</item>
</string-array>

</resources>