<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="10dp"
              android:orientation="horizontal"
              android:weightSum="1">


    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/pe_pulse"
                android:textSize="@dimen/text_size_ten"/>

        <com.noqapp.android.merchant.views.customviews.MeterView
                android:id="@+id/mv_pulse"
                style="@style/MeterViewStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_pulse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:textSize="@dimen/text_size_fourteen"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".3"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/pe_bp"
                android:textSize="@dimen/text_size_ten"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Systolic"/>

            <View
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/tilt_line"
                    android:visibility="gone"/>

            <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Diastolic"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.noqapp.android.merchant.views.customviews.MeterView
                    android:id="@+id/mv_bp_high"
                    style="@style/MeterViewStyle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <View
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/tilt_line"/>

            <com.noqapp.android.merchant.views.customviews.MeterView
                    android:id="@+id/mv_bp_low"
                    style="@style/MeterViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_bp_systolic"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text=""/>

            <View
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/tilt_line"
                    android:visibility="gone"/>

            <TextView
                    android:id="@+id/tv_bp_diastolic"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text=""/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/pe_weight"
                android:textSize="@dimen/text_size_ten"/>

        <com.noqapp.android.merchant.views.customviews.MeterView
                android:id="@+id/mv_weight"
                style="@style/MeterViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:textSize="@dimen/text_size_fourteen"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/pe_temperature"
                android:textSize="@dimen/text_size_ten"/>

        <com.noqapp.android.merchant.views.customviews.MeterView
                android:id="@+id/mv_temperature"
                style="@style/MeterViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:textSize="@dimen/text_size_fourteen"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/pe_oxygen"
                android:textSize="@dimen/text_size_ten"/>

        <com.noqapp.android.merchant.views.customviews.MeterView
                android:id="@+id/mv_oxygen"
                style="@style/MeterViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_oxygen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:textSize="@dimen/text_size_fourteen"/>
    </LinearLayout>
</LinearLayout>