<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="History"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_enable_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="5dp"
                android:theme="@style/SCBSwitch" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/style_mdh_header"
                        android:text="@string/mds_known_allergies" />

                    <EditText
                        android:id="@+id/edt_known_allergy"
                        style="@style/style_mdh_details"
                        android:gravity="top"
                        android:minLines="5"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/style_mdh_header"
                            android:text="@string/mds_past_history" />

                        <EditText
                            android:id="@+id/edt_past_history"
                            style="@style/style_mdh_details"
                            android:gravity="top"
                            android:minLines="5"
                            android:text="" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/style_mdh_header"
                        android:text="@string/mds_family_history" />

                    <EditText
                        android:id="@+id/edt_family_history"
                        style="@style/style_mdh_details"
                        android:gravity="top"
                        android:minLines="5"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/style_mdh_header"
                        android:text="@string/mds_medicine_allergies" />

                    <EditText
                        android:id="@+id/edt_medicine_allergies"
                        style="@style/style_mdh_details"
                        android:gravity="top"
                        android:minLines="5"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>